# gf256-hs

./: .gitignore  ChangeLog.md  LICENSE  README.md  gf256.cabal
example/: .gitignore  MyUtil.hs  Polynomial.hs  RSdecode.hs  ReedSolomon.hs
src/Data/: ExtendedF2.hs  ExtensionF2.hs  GF2.hs  GF256.hs  GF2Extension.hs  GF2Polynomial.hs
src/Data/GF256/: GP256Insts.hs  GenPoly256.hs
