
name:                gf256
version:             0.1.0.0
synopsis:            GF(2^8)
description:         An implementation of GF(2^8).
homepage:            https://github.com/naohaq/gf256-hs
license:             MIT
license-file:        LICENSE
author:              Naoyuki MORITA
maintainer:          naoyuki.morita@gmail.com
category:            Math, Algebra, Data
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

flag InstanceOfFiniteField
  Description: Enable declaration as an instance of FiniteField
  Default: False
  Manual: True

source-repository head
  type: git
  location: git://github.com/naohaq/gf256-hs.git

library
  hs-source-dirs: src
  exposed-modules:
     Data.GF256
     Data.GF2Extension
     Data.GF2Polynomial
     Data.GF256.GenPoly256
     Data.GF256.GP256Insts
  -- other-modules:       
  other-extensions:
     ScopedTypeVariables
     DeriveDataTypeable
     TemplateHaskell
     BangPatterns
  build-depends:
     base >=4.9 && <4.10, array >=0.5 && <0.6, template-haskell >=2.11 && <2.12, type-level-numbers >=0.1 && <0.2
  if flag(InstanceOfFiniteField)
     Build-Depends: finite-field >= 0.9.0
     CPP-Options: "-DInstanceOfFiniteField"
  default-language:    Haskell2010
